animation intro fix, nav menu z-index fix, tooltip z-index fix

--- a/src/components/nav/Nav.module.scss
+++ b/src/components/nav/Nav.module.scss
@@ -23,7 +23,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 99;
+  z-index: 100;
   padding: 0rem 0 4rem 30vw; 
   background-color: $color-3;
   width: 100%;
